--- a/docs/style.css
+++ b/docs/style.css
@@ -523,18 +523,29 @@ body, html {
 }
 
 /* --- No Image Layout for Kkumjungdok/Hyeonghae --- */
+.no-image-layout .result-body {
+    justify-content: center;
+    align-items: center;
+}
+.no-image-layout .result-left {
+    display: none;
+}
+
 .no-image-layout .result-right {
-    flex-basis: 100%;
+    flex-basis: auto; /* Let content define width */
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.no-image-layout .result-text-wrapper p {
+    text-indent: 0;
     text-align: center;
 }
 
 .no-image-layout .result-links-container {
     align-self: center;
-}
-
-.no-image-layout .result-text-wrapper p {
-    text-align: center;
-    text-indent: 0;
 }
 
 /* --- Slider Styles --- */
